[gd_scene load_steps=6 format=3 uid="uid://cjqwhd0fo7jx4"]

[ext_resource type="Script" path="res://Entities/WorkSystem/Furnace/furnace_gui.gd" id="1_0r7yd"]
[ext_resource type="PackedScene" uid="uid://4vjolsmd3wyq" path="res://GUI/inventory_bar.tscn" id="1_u5j5u"]
[ext_resource type="Texture2D" uid="uid://c7sgrx0lycx5m" path="res://Assets/progress_arrow.png" id="2_2b4wl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6mlv8"]
bg_color = Color(0.188235, 0.462745, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hiae2"]
bg_color = Color(0.188235, 1, 1, 1)

[node name="FurnaceGUI" type="MarginContainer" node_paths=PackedStringArray("input_container", "fuel_container", "fuel_bar")]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_0r7yd")
input_container = NodePath("HBoxContainer/VBoxContainer/InputInventoryBar")
fuel_container = NodePath("HBoxContainer/VBoxContainer/HBoxContainer/FuelInventoryBar")
fuel_bar = NodePath("HBoxContainer/VBoxContainer/HBoxContainer/FuelProgressBar")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="InputInventoryBar" parent="HBoxContainer/VBoxContainer" instance=ExtResource("1_u5j5u")]
layout_mode = 2
alignment = 2
slot_count = 1
item_filter = Array[int]([9, 5])

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="FuelProgressBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_6mlv8")
theme_override_styles/fill = SubResource("StyleBoxFlat_hiae2")
max_value = 1.0
fill_mode = 3
show_percentage = false

[node name="FuelInventoryBar" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_u5j5u")]
layout_mode = 2
slot_count = 1
group_filter = Array[int]([0])

[node name="WorkProgressBar" type="TextureProgressBar" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01
texture_under = ExtResource("2_2b4wl")
texture_progress = ExtResource("2_2b4wl")
tint_under = Color(0.188235, 0.462745, 1, 1)
tint_progress = Color(0.188235, 1, 1, 1)

[node name="OutputInventoryBar" parent="HBoxContainer" instance=ExtResource("1_u5j5u")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
alignment = 1
slot_count = 1
item_filter = Array[int]([19])
